--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>Mi primera pagina en GIT</h1>
+<h1>otro texto</h1>
 <h2>Astrid Geovanna Maldonado Medina</h2>
 <h3>Certificado en Desarrollo Web UNITEC 2025</h3>
